# expeditionos

./: CHANGELOG.md  Cargo.toml  README.md
src/: lib.rs  main.rs
src/assets/: save.toml
src/assets/data/: cpu.toml  os.toml  ram.toml
src/commands/: delete.rs  init.rs  mod.rs  reset.rs  start.rs  update.rs
src/data_structs/: cpu.rs  mod.rs  os.rs  ram.rs
src/helpers/: boot.rs  files.rs  hardware.rs  mod.rs  save.rs
