[package]
name = "expeditionos"
version = "0.2.0"
edition = "2021"
description = "A small CPU game to play with fictional hardware."
license = "CC-BY-NC-ND-4.0"
repository = "https://github.com/Devitzer/expeditionos"

[dependencies]
colored = "2.1.0"
dialoguer = "0.11.0"
serde = { version = "1.0.207", features = ["derive"] }
toml = "0.8.19"
